--- a/client/src/components/MainMenu/MainMenu.css
+++ b/client/src/components/MainMenu/MainMenu.css
@@ -3,10 +3,54 @@
     grid-template-rows: auto 1fr auto ;
     width: 200px;
     height: 100vh;
-    background-color: var(--IDA-Fondo-Gris);
+    background-color: var(--DarkGreyBackground);
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
+
+.sidebar--active {
+    display: grid !important;
+}
+
+.topMenu--mobile {
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+      
+    .sidebar {
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 100;
+    }
+
+    .topMenu--mobile {
+        user-select: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: var( --DarkGreyBackground);
+        height: 20px;
+        padding: 10px 20px;
+      }
+    
+      .mobile-logo {
+        max-height: auto;
+      }
+    
+      .topMenu--mobile i {
+        color: var(--White);
+        font-size: 20px;
+        align-items: center;
+        cursor: pointer;
+      }
+}
+
+
+
+
 
 /* Logo del Menú */
 
@@ -15,7 +59,7 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    background-color: var(--IDA-Fondo-Gris);
+    background-color: var(--DarkGreyBackground);
 }
 
 .sidebar__logo {
@@ -25,7 +69,7 @@
 /* Links del Menú */
 
 .sidebar__itemsContainer {
-    background-color: var(--IDA-Fondo-Gris);
+    background-color: var(--DarkGreyBackground);
 }
 
 .sidebar-items-nav {
@@ -40,7 +84,7 @@
 
 .sidebar__category {
     list-style: none;
-    color: var(--IDA-Texto-Sobre-Fondo);
+    color: var(--TextOverGreyBackground);
     font-size: 13px;
     padding: 20px 0 14px 20px;
 }
@@ -55,13 +99,13 @@
     align-items: center;
     gap: 10px;
     text-decoration: none;
-    color: var(--IDA-Texto-Sobre-Fondo);
+    color: var(--TextOverGreyBackground);
     padding: 6px 16px 6px 20px;
     cursor: pointer;
 }
 
 .sidebar_item:hover {
-    background-color: #293947;
+    background-color: var(--DarkGreyBackgroundHover);
 }
 
 .sidebar__itemIcon {
@@ -83,12 +127,12 @@
     position: sticky;
     bottom: 0;
     z-index: 1;
-    background-color: var(--IDA-Fondo-Gris);
+    background-color: var(--DarkGreyBackground);
 
 }
 
 .sidebar__profileContainer:hover {
-    background-color: #293947;
+    background-color: var(--DarkGreyBackgroundHover);
 }
 
 .sidebar__profileBox {
@@ -108,7 +152,7 @@
 .sidebar__profileInfo {
     display: flex;
     flex-direction: column;
-    color: var(--IDA-Texto-Sobre-Fondo);
+    color: var(--TextOverGreyBackground);
 }
 
 .sidebar__profileName {
@@ -123,68 +167,20 @@
 }
 
 
-/* Versión Móbil */
 
-.sidebar--mobile {
-    display: none;
-  }
-  
+
+
   /* Celular */
   
-  @media screen and (max-width: 800px) {
+
+@media screen and (max-width: 800px) {
     .box-padding {
-      padding: 15px;
+        padding: 15px;
     }
+}
   
-    .active {
-      display: block !important;
-  }
-  }
+/* Tablet */
   
-  /* Tablet */
-  
-  @media screen and (max-width: 1000px) {
-    
-    .mainAppContainer {
-        grid-template-columns: 1fr;
-        grid-template-rows: 40px 1fr;
-        height: 100vh;
-    }
-  
-    .sidebar {
-      display: none;
-      position: absolute;
-      left: 0;
-    }
-  
-    .active {
-      display: block !important;
-    } 
-  
-    .main-menu {
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-  
-    .sidebar--mobile {
-      user-select: none;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      background-color: var(--IDA-Fondo-Gris);
-      height: 20px;
-      padding: 10px 20px;
-    }
-  
-    .mobile-logo {
-      max-height: auto;
-    }
-  
-    .sidebar--mobile i {
-      color: var(--White);
-      font-size: 20px;
-      align-items: center;
-      cursor: pointer;
-    }
+@media screen and (max-width: 1000px) { 
+   
   }
