calendario con css adelantado

--- a/client/src/components/CalMovimientos/CalMovimientos.css
+++ b/client/src/components/CalMovimientos/CalMovimientos.css
@@ -1,4 +1,42 @@
 
-.calendar-movimientos {
-    font-size: 30px !important;
+.css-cwhad8-MuiDateCalendar-root {
+    width: 100% !important;
+}
+
+/* Header Calendario */
+.css-nk89i7-MuiPickersCalendarHeader-root {
+    justify-content: space-between !important;
+    padding-left: 8px !important;
+    padding-right: 0 !important;
+}
+
+
+.css-i5q14k-MuiDayCalendar-header {
+    justify-content: space-between !important ;
+}
+
+/* Dias de la semana */
+.css-flbe84-MuiDayCalendar-weekContainer {
+    justify-content: space-between !important;
+}
+
+
+/* Números más Grandes */
+.css-1u23akw-MuiButtonBase-root-MuiPickersDay-root {
+    font-size: 14px !important;
+    color: #4F5050 !important;
+}
+
+.css-18wn1yb-MuiButtonBase-root-MuiPickersDay-root {
+    font-size: 14px !important;
+}
+
+/* Selección Azul Media Hit */
+.css-1u23akw-MuiButtonBase-root-MuiPickersDay-root.Mui-selected{
+    background-color: var(--Blue) !important;
+    color: var(--White) !important;
+}
+
+.css-jgls56-MuiButtonBase-root-MuiPickersDay-root.Mui-selected:hover {
+    background-color: var(--Blue) !important;
 }
