inicio de lista de movimientos

--- a/client/src/components/Movimientos/Movimientos.css
+++ b/client/src/components/Movimientos/Movimientos.css
@@ -40,6 +40,20 @@
 }
 
 
+.rightSideContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+@media screen and (max-width: 1000px) {
+    .rightSideContainer {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
+
+
 
 /* Celular */
 @media screen and (max-width: 800px) {
