--- a/client/src/components/CalMovimientos/CalMovimientos.css
+++ b/client/src/components/CalMovimientos/CalMovimientos.css
@@ -8,6 +8,7 @@
     justify-content: space-between !important;
     padding-left: 8px !important;
     padding-right: 0 !important;
+    margin-top: 0px !important;
 }
 
 /* Título Mes y Año */
