--- a/client/src/components/MainMenu/MainMenu.css
+++ b/client/src/components/MainMenu/MainMenu.css
@@ -1,186 +1,176 @@
 .sidebar {
-    display: grid;
-    grid-template-rows: auto 1fr auto ;
-    width: 200px;
-    height: 100vh;
-    background-color: var(--DarkGreyBackground);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 200px;
+  height: 100vh;
+  background-color: var(--DarkGreyBackground);
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  z-index: 999;
 }
 
 .sidebar--active {
-    display: grid !important;
+  display: grid !important;
 }
 
 .topMenu--mobile {
-    display: none;
+  display: none;
+  z-index: 999;
 }
 
 @media screen and (max-width: 1000px) {
-      
-    .sidebar {
-      display: none;
-      position: absolute;
-      left: 0;
-      top: 0;
-      z-index: 100;
-    }
+  .sidebar {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100;
+  }
 
-    .topMenu--mobile {
-        user-select: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        background-color: var( --DarkGreyBackground);
-        height: 20px;
-        padding: 10px 20px;
-      }
-    
-      .mobile-logo {
-        max-height: auto;
-      }
-    
-      .topMenu--mobile i {
-        color: var(--White);
-        font-size: 20px;
-        align-items: center;
-        cursor: pointer;
-      }
+  .topMenu--mobile {
+    user-select: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--DarkGreyBackground);
+    height: 20px;
+    padding: 10px 20px;
+  }
+
+  .mobile-logo {
+    max-height: auto;
+  }
+
+  .topMenu--mobile i {
+    color: var(--White);
+    font-size: 20px;
+    align-items: center;
+    cursor: pointer;
+  }
 }
-
-
-
-
 
 /* Logo del Menú */
 
 .sidebar__logoContainer {
-    padding: 20px 0 10px 20px;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    background-color: var(--DarkGreyBackground);
+  padding: 20px 0 10px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: var(--DarkGreyBackground);
 }
 
 .sidebar__logo {
-    width: 105px;
+  width: 105px;
 }
 
 /* Links del Menú */
 
 .sidebar__itemsContainer {
-    background-color: var(--DarkGreyBackground);
+  background-color: var(--DarkGreyBackground);
 }
 
 .sidebar-items-nav {
-    padding: 0;
+  padding: 0;
 }
 
 .sidebar-items-container {
-    padding: 0;
-    max-height: calc(100vh - 160px);
-    overflow-y: auto;
+  padding: 0;
+  max-height: calc(100vh - 160px);
+  overflow-y: auto;
 }
 
 .sidebar__category {
-    list-style: none;
-    color: var(--TextOverGreyBackground);
-    font-size: 13px;
-    padding: 20px 0 14px 20px;
+  list-style: none;
+  color: var(--TextOverGreyBackground);
+  font-size: 13px;
+  padding: 20px 0 14px 20px;
 }
 
 .sidebar-items-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar_item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    text-decoration: none;
-    color: var(--TextOverGreyBackground);
-    padding: 6px 16px 6px 20px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: var(--TextOverGreyBackground);
+  padding: 6px 16px 6px 20px;
+  cursor: pointer;
 }
 
 .sidebar_item:hover {
-    background-color: var(--DarkGreyBackgroundHover);
+  background-color: var(--DarkGreyBackgroundHover);
 }
 
 .sidebar__itemIcon {
-    height: 18px;
-    padding-top: 4px;
+  height: 18px;
+  padding-top: 4px;
 }
 
 .sidebar__itemText {
-    padding-left: 6px;
-    font-size: 14px;
+  padding-left: 6px;
+  font-size: 14px;
 }
 
 /* Perfil del Menú */
 
 .sidebar__profileContainer {
-    padding: 20px;
-    border-top: 1px solid #3d5369;
-    cursor: pointer;
-    position: sticky;
-    bottom: 0;
-    z-index: 1;
-    background-color: var(--DarkGreyBackground);
-
+  padding: 20px;
+  border-top: 1px solid #3d5369;
+  cursor: pointer;
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+  background-color: var(--DarkGreyBackground);
 }
 
 .sidebar__profileContainer:hover {
-    background-color: var(--DarkGreyBackgroundHover);
+  background-color: var(--DarkGreyBackgroundHover);
 }
 
 .sidebar__profileBox {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    column-gap: 10px;
-    text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 10px;
+  text-decoration: none;
 }
 
 .sidebar__profileImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
 }
 
 .sidebar__profileInfo {
-    display: flex;
-    flex-direction: column;
-    color: var(--TextOverGreyBackground);
+  display: flex;
+  flex-direction: column;
+  color: var(--TextOverGreyBackground);
 }
 
 .sidebar__profileName {
-    text-decoration: none;
-    font-size: 14px;
-    padding-bottom: 6px;
+  text-decoration: none;
+  font-size: 14px;
+  padding-bottom: 6px;
 }
 
 .sidebar_profileCharge {
-    font-size: 12px;
-    color: #506d89;
+  font-size: 12px;
+  color: #506d89;
 }
 
-
-
-
-
-  /* Celular */
-  
+/* Celular */
 
 @media screen and (max-width: 800px) {
-    .box-padding {
-        padding: 15px;
-    }
-}
-  
-/* Tablet */
-  
-@media screen and (max-width: 1000px) { 
-   
+  .box-padding {
+    padding: 15px;
   }
+}
+
+/* Tablet */
+
+@media screen and (max-width: 1000px) {
+}
