--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,6 +95,7 @@
   margin-left: 10px;
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
+  border: none;
 }
 
 .toolBoxIcon:hover {
