--- a/client/src/components/Movimientos/Movimientos.css
+++ b/client/src/components/Movimientos/Movimientos.css
@@ -20,6 +20,8 @@
   padding: 0 30px;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
   z-index: 100;
+  position: sticky;
+  top: 0;
 }
 
 .pageTittle {
