Switch por buen camino

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,7 @@
   --TextOverGreyBackground: #b6bcc2;
   --MutedGrey: #00000050;
   --DividerBorder: #b6bcc2;
+  --InactiveField: #626365;
 }
 
 /* Iconos */
