--- a/client/src/App.css
+++ b/client/src/App.css
@@ -141,7 +141,7 @@
   justify-content: space-between;
   height: 60px;
   background-color: var(--White);
-  padding: 0 30px;
+  padding: 5px 30px;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
   z-index: 100;
   position: sticky;
@@ -149,7 +149,7 @@
 }
 
 .pageTittle {
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 500;
   color: var(--Tittles);
 }
