--- a/client/src/pages/NuevoEgresoPage/CostoTransferencia.css
+++ b/client/src/pages/NuevoEgresoPage/CostoTransferencia.css
@@ -11,9 +11,16 @@
   align-items: center;
 }
 
+.transferencia__fila1--active {
+  border-bottom: 1px solid #babbbf;
+  padding-bottom: 10px;
+  margin-bottom: 16px;
+}
+
 .transferencia__fila2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding-bottom: 8px;
 }
 
 .trasnferencia__fila2__columna1 {
@@ -23,4 +30,13 @@
 .transferencia__fila2__columna2 {
   display: flex;
   flex-direction: column;
+}
+
+.iva-selector {
+  margin-bottom: -12px;
+}
+
+.css-ahj2mt-MuiTypography-root {
+  font-size: 14px !important;
+  color: var(--InactiveField);
 }
